2008-07-22  Dean Brettle <dean@brettle.com>

	* LosFormatter.cs: fixed bug 411115 where passing an unseekable 
	stream to LosFormatter.Deserialize() causes an exception.

2008-07-14  Marek Habersack  <mhabersack@novell.com>

	* Page.cs: fix the failing tests by moving the form
	RaisePostBackEvent code up in RaisePostBackEvents, so that
	Validate () isn't called together with the registered post back
	events.

2008-07-10  Roei Erez  <roeie@mainsoft.com>

	* ClientScriptManager.cs: Bug in javacript code, usind window scope instead of document.

2008-07-11  Marek Habersack  <mhabersack@novell.com>

	* Control.cs: if adapter exists for the given control, use it for
	rendering. Patch from Christian Hergert
	<christian.hergert@gmail.com>, thanks!

2008-07-10  Roei Erez  <roeie@mainsoft.com>

	* Page.cs: Differentiate between IPostBackEventHandler that was registered by the user, 
	and one that was given as post parameter, so that in case ther post data may trigger both 
	IPostBackEventHandler and IPostBackDataHandler, only the IPostBackDataHandler is actually triggered.

2008-07-09  Rodrigo Kumpera  <rkumpera@novell.com>

	* DataBinder.cs (GetDataItem): Commited stupid code.

2008-07-09  Rodrigo Kumpera  <rkumpera@novell.com>

	* DataBinder.cs (GetDataItem): Use a per-thread cache for
	property lookup.

2008-07-02  Rodrigo Kumpera  <rkumpera@novell.com>

	* Control.cs: Fix the lookup in ResolveAdapter that I
	broke in the previous change.

2008-07-02  Rodrigo Kumpera  <rkumpera@novell.com>

	* Control.cs: Optimize ResolveAdapter a bit more.

2008-07-02  Rodrigo Kumpera  <rkumpera@novell.com>

	* Control.cs: Optimize the Adapter property and ResolveAdapter a bit.

2008-07-01  Rodrigo Kumpera  <rkumpera@novell.com>

	* TemplateControl.cs: Kill a foreach loop.

2008-06-30  Marek Habersack  <mhabersack@novell.com>

	* TemplateParser.cs: use atomic incrementation for automatic class
	name creation to avoid Monitor Enter/Exit.
