@@ -1,3 +1,7 @@
+2008-07-22  Gert Driesen <drieseng@users.sourceforge.net>
+
+	* LosFormatterTest.cs: Improved test for bug #411115.
+
 2008-07-22  Dean Brettle <dean@brettle.com>
 
 	* LosFormatterTest.cs: added test for bug 411115 where passing an
